CSS e HTML (de acordo com o módulo 2)

--- a/index.html
+++ b/index.html
@@ -3,10 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Libertinus+Mono&display=swap" rel="stylesheet">
     <title>Strings</title>
 </head>
 <body>
+     <div class="container"> 
+      <h1>Extrator de palavras-chave</h1> 
+      <textarea 
+        id="entrada-de-texto" 
+        placeholder="Digite ou cole seu texto aqui..." 
+      ></textarea> 
+      <button id="botao-palavrachave">Extrair</button> 
+      <div id="resultado-palavrachave"></div> 
+    </div> 
     
 </body>
 </html>
