--- a/index.html
+++ b/index.html
@@ -10,15 +10,12 @@
     <title>Strings</title>
 </head>
 <body>
-     <div class="container"> 
-      <h1>Extrator de palavras-chave</h1> 
-      <textarea 
-        id="entrada-de-texto" 
-        placeholder="Digite ou cole seu texto aqui..." 
-      ></textarea> 
-      <button id="botao-palavrachave">Extrair</button> 
-      <div id="resultado-palavrachave"></div> 
-    </div> 
-    
+      <div class="container">
+        <h1>Extrator de palavras-chave</h1>
+        <textarea id="entrada-de-texto" placeholder="Digite ou cole seu texto aqui..."></textarea>
+        <button id="botao-palavrachave">Extrair</button>
+        <div id="resultado-palavrachave"></div>
+    </div>
+
 </body>
 </html>
