--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <button id="botao-palavrachave">Extrair</button>
         <div id="resultado-palavrachave"></div>
     </div>
+    <script src="script.js"></script>
 
 </body>
 </html>
